--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>Edu_Hustlr</title>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <p>This is where I'll share my hobbies</p>
+  <h1>Edu_Hustlr Developer</h1>
 </body>
 </html>
