--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
 <title>Edu_Hustlr</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Veranda, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+  }
+  header {
+    background-color: #ffcc00;
+    color: #333;
+    padding: 20px;
+    text-align: center;
+  }
+  h1 {
+    margin 0;
+  }
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+  }
+  .gallery-item {
+    background-color: white;
+    margin: 10px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 300px;
+    box-shadow: 2px 2px 8px rgba (0,0,0,0,1);
+  }
+  .gallery-item img {
+    width: 100%;
+    height: auto;
+  }
+  .description {
+    padding: 10px;
+    font-size: 0.9em;
+  }
+  footer {
+    text-align: center;
+    padding: 10px;
+    font-size: 0.8em;
+    background-color: #333;
+    color: white;
+  }
+</style>
 </head>
 <body>
-  <h1>Edu_Hustlr Developer</h1>
+  
 </body>
-</html>
