--- a/index.html
+++ b/index.html
@@ -54,3 +54,18 @@
 <body>
   
 </body>
+<header>
+  <h1>Welcome</h1>
+  <p>Bricks</p>
+</header>
+<div class="gallery">
+  <div class="gallery-item">
+    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+1" alt="Lego Build 1">
+    <div class="description">
+      <strong> LEGO Robotics </strong><br>
+      Designed to
+    </div>
+  </div>
+<footer>Created by Tish</footer>
+</body>
+</html>
