--- a/index.html
+++ b/index.html
@@ -2,70 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<title>Edu_Hustlr</title>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Veranda, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  }
-  header {
-    background-color: #ffcc00;
-    color: #333;
-    padding: 20px;
-    text-align: center;
-  }
-  h1 {
-    margin 0;
-  }
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-  }
-  .gallery-item {
-    background-color: white;
-    margin: 10px;
-    border: 2px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 300px;
-    box-shadow: 2px 2px 8px rgba (0,0,0,0,1);
-  }
-  .gallery-item img {
-    width: 100%;
-    height: auto;
-  }
-  .description {
-    padding: 10px;
-    font-size: 0.9em;
-  }
-  footer {
-    text-align: center;
-    padding: 10px;
-    font-size: 0.8em;
-    background-color: #333;
-    color: white;
-  }
-</style>
+  <title>Tish's LEGO Lab</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #ffcc00;
+      color: #333;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      margin: 0;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 20px;
+    }
+    .gallery-item {
+      background-color: white;
+      margin: 10px;
+      border: 2px solid #ddd;
+      border-radius: 8px;
+      overflow: hidden;
+      width: 300px;
+      box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+    }
+    .gallery-item img {
+      width: 100%;
+      height: auto;
+    }
+    .description {
+      padding: 10px;
+      font-size: 0.9em;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      font-size: 0.8em;
+      background-color: #333;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-  
-</body>
+
 <header>
-  <h1>Welcome</h1>
-  <p>Bricks</p>
+  <h1>Welcome to Tish's LEGO Lab</h1>
+  <p>Where bricks meet brilliance.</p>
 </header>
+
 <div class="gallery">
   <div class="gallery-item">
-    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+1" alt="Lego Build 1">
+    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+1" alt="LEGO Build 1">
     <div class="description">
-      <strong> LEGO Robotics </strong><br>
-      Designed to
+      <strong>LEGO Robotics Rover</strong><br>
+      Designed with motors and sensors. Great for Mars simulations.
     </div>
   </div>
-<footer>Created by Tish</footer>
+  <div class="gallery-item">
+    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+2" alt="LEGO Build 2">
+    <div class="description">
+      <strong>Mini LEGO City</strong><br>
+      Includes a train system and custom-built skyscrapers.
+    </div>
+  </div>
+  <div class="gallery-item">
+    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+3" alt="LEGO Build 3">
+    <div class="description">
+      <strong>Makey Makey LEGO Piano</strong><br>
+      A fun STEM crossover using conductive bricks.
+    </div>
+  </div>
+</div>
+
+<footer>
+  Created with bricks and brains by Tish. Powered by GitHub Pages.
+</footer>
+
 </body>
 </html>
