--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
 <div class="gallery">
   <div class="gallery-item">
-    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+1" alt="LEGO Build 1">
+    <img src="https://www.lego.com/en-us/product/jeep-wrangler-42122" alt="LEGO Build 1">
     <div class="description">
-      <strong>LEGO Robotics Rover</strong><br>
-      Designed with motors and sensors. Great for Mars simulations.
+      <strong>LEGO Jeep Rangler</strong><br>
+      Retired Set
     </div>
   </div>
   <div class="gallery-item">
