--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     </div>
   </div>
   <div class="gallery-item">
-    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+2" alt="LEGO Build 2">
+    <img src="https://www.lego.com/en-us/product/ferrari-f40-supercar-76934" alt="LEGO Build 2">
     <div class="description">
-      <strong>Mini LEGO City</strong><br>
-      Includes a train system and custom-built skyscrapers.
+      <strong>Ferrari F40 Supercar</strong><br>
+      Cherry Red.
     </div>
   </div>
   <div class="gallery-item">
