--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="gallery-item">
-    <img src="https://www.lego.com/en-us/product/ferrari-f40-supercar-76934" alt="LEGO Build 2">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt7695c868f384e19e/76934_WEB_PRI_NOBG.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 2">
     <div class="description">
       <strong>Ferrari F40 Supercar</strong><br>
       Cherry Red.
