--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <div class="gallery">
   <div class="gallery-item">
-    <img src="https://www.lego.com/cdn/cs/set/assets/blt5ca8d7adce06a3a4/42122.jpg?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 1">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blta6b20f9a5ef1d258/42122_alt4.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 1">
     <div class="description">
       <strong>LEGO Jeep Wrangler</strong><br>
       Retired Set
