--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <img src="https://www.lego.com/cdn/cs/set/assets/blt08aac0509cd0f13d/76934_Prod.png?fit=bounds&format=jpg&quality=80&width=1500&height=1500&dpr=1" alt="LEGO Build 2">
     <div class="description">
       <strong>Ferrari F40 Supercar</strong><br>
-      Cherry Red.
+      Cherry Red
     </div>
   </div>
   <div class="gallery-item">
-    <img src="https://via.placeholder.com/300x200?text=LEGO+Build+3" alt="LEGO Build 3">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt26b277a676932db9/76924_alt1.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 3">
     <div class="description">
-      <strong>Makey Makey LEGO Piano</strong><br>
-      A fun STEM crossover using conductive bricks.
+      <strong>Mercedes-AMG G 63 & Mercedes-AMG SL 63</strong><br>
+      #76924
     </div>
   </div>
 </div>
