--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
     </div>
   </div>
 </div>
+ <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt22104f90cf1009c9/10317.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 4">
+    <div class="description">
+      <strong>Land Rover Classic Defender 90</strong><br>
+      #10317
+    </div>
+  </div>
+</div>
 
 <footer>
   Created with bricks and brains by Tish. Powered by GitHub Pages.
