--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
     </div>
   </div>
 </div>
+   <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt43f376e598e9de93/21345_alt2.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 4">
+    <div class="description">
+      <strong>Polaroid OneStep SX-70 Camera</strong><br>
+      #21345
+    </div>
+  </div>
+</div>
 
 <footer>
   Created with bricks and brains by Tish. Powered by GitHub Pages.
