--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="gallery-item">
     <img src="https://www.lego.com/cdn/cs/set/assets/blta6b20f9a5ef1d258/42122_alt4.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 1">
     <div class="description">
-      <strong>LEGO Jeep Wrangler</strong><br>
+      <strong>Jeep Wrangler</strong><br>
       Retired Set
     </div>
   </div>
@@ -90,7 +90,7 @@
   </div>
 </div>
    <div class="gallery-item">
-    <img src="https://www.lego.com/cdn/cs/set/assets/blt43f376e598e9de93/21345_alt2.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 4">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt43f376e598e9de93/21345_alt2.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 5">
     <div class="description">
       <strong>Polaroid OneStep SX-70 Camera</strong><br>
       #21345
