--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       overflow: hidden;
       width: 300px;
       box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
     .gallery-item img {
       width: 100%;
