--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Educator_Hustle - Lego Lab</title>
+  <title>Educator_Hustle - Brics Lab</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -55,7 +55,7 @@
 <body>
 
 <header>
-  <h1>E_C LEGO Lab</h1>
+  <h1>E_C Brics Lab</h1>
   <p>Where bricks meet brilliance.</p>
 </header>
 
