--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <header>
   <h1>E_C Brics Lab</h1>
   <p>Where bricks meet brilliance.</p>
-  <p><a href="about.html">About Me</a> | <a href="index.html">Gallery</a></p>
+  <p><a href="about.html">About Me</a></p>
 
 </header>
 
