--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <img src="https://www.lego.com/cdn/cs/set/assets/blta6b20f9a5ef1d258/42122_alt4.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 1">
     <div class="description">
       <strong>Jeep Wrangler</strong><br>
-      Retired Set
+      #42122 [Retired]
     </div>
   </div>
 
@@ -74,7 +74,7 @@
     <img src="https://www.lego.com/cdn/cs/set/assets/blt08aac0509cd0f13d/76934_Prod.png?fit=bounds&format=jpg&quality=80&width=1500&height=1500&dpr=1" alt="LEGO Build 2">
     <div class="description">
       <strong>Ferrari F40 Supercar</strong><br>
-      Cherry Red
+      #76934
     </div>
   </div>
 
