--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
       #21345
     </div>
   </div>
+  <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/bltefae9408b7d12016/42151_alt3.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 6">
+    <div class="description">
+      <strong>Bugatti Bolide</strong><br>
+      #42151
+    </div>
+  </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
