--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
       #42151
     </div>
   </div>
+   <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt931709111b0a817e/76920_WEB_SEC03_NOBG.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 7">
+    <div class="description">
+      <strong>Ford Mustang Dark Horse Sports Car</strong><br>
+      #76920
+    </div>
+  </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
