--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
       #76920
     </div>
   </div>
+   <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt6442a343ca0bb4c5/42111.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 8">
+    <div class="description">
+      <strong>Dom's Dodge Charger</strong><br>
+      #42111 [Retired]
+    </div>
+  </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
