--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <p><a href="about.html">About Me</a></p>
 
 </header>
-
+<p>Sets I Own</p>
 <div class="gallery">
   <div class="gallery-item">
     <img src="https://www.lego.com/cdn/cs/set/assets/blta6b20f9a5ef1d258/42122_alt4.png?format=webply&fit=bounds&quality=60&width=800&height=800&dpr=2" alt="LEGO Build 1">
