--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
       #42111 [Retired]
     </div>
   </div>
+   <div class="gallery-item">
+    <img src="https://www.lumibricks.com/cdn/shop/files/1-2_5fde883f-21e6-4982-9b5b-f6b2dccce18a.jpg?v=1698743243" alt="LEGO Build 9">
+    <div class="description">
+      <strong>Jungle Off Roader</strong><br>
+      LumiBricks - formally <i>FunHouse</i>
+    </div>
+  </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
