--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
       LumiBricks - formally <i>FunHouse</i>
     </div>
   </div>
+   <div class="gallery-item">
+    <img src="https://www.lumibricks.com/cdn/shop/products/funwhole-wood-cabin-fh9001-light.jpg?v=1658279999" alt="LEGO Build 10">
+    <div class="description">
+      <strong>Wood Cabin</strong><br>
+      LumiBricks - formally <i>FunHouse</i>
+    </div>
+  </div>
+  
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
