--- a/index.html
+++ b/index.html
@@ -136,7 +136,13 @@
       LumiBricks - formally <i>FunHouse</i>
     </div>
   </div>
-  
+  <div class="gallery-item">
+    <img src="https://i5.walmartimages.com/asr/e9502895-82a8-404a-9e2a-5922b983e2cb.7f86f0903698fca28f2b7169ab12b683.jpeg" alt="LEGO Build 11">
+    <div class="description">
+      <strong>Yellowstone Steer Skull</strong><br>
+      BrickCraft
+    </div>
+  </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
 
 <footer>
