--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
     </div>
   </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
+<hr style="margin: 40px auto; width: 80%; border: 1px solid #ccc;">
+
+<section id="games" style="padding: 40px; text-align: center;">
+  <h2 style="margin-bottom: 10px;">🎮 My Video Games</h2>
+  <p>When I’m not building with bricks, I’m building worlds. Check out some of my game projects below!</p>
+
+  <!-- Game 1 -->
+  <div style="max-width: 800px; margin: 20px auto; background-color: white; border-radius: 10px; padding: 20px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); text-align: left;">
+    <h3>🕹️ God Sim: Divine Decisions</h3>
+    <p>A game where players become a god and must influence their followers through signs, rituals, and divine tantrums. Built using Unity and pure imagination.</p>
+    <p><em>Status:</em> In development • <em>Genre:</em> Strategy / Simulation</p>
+    <!-- Optional: add image or link to GitHub or playable demo -->
+  </div>
+
+  <!-- Add more game blocks here -->
+
+</section>
 
 <footer>
   Created with bricks and brains by Tish. Powered by GitHub Pages.
