--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <section id="games" style="padding: 40px; text-align: center;">
   <h2 style="margin-bottom: 10px;">🎮 My Video Games</h2>
-  <p>When I’m not building with bricks, I’m building worlds. Check out some of my game projects below!</p>
+  <p>When I’m not building with bricks, I'm playing LEGO's on my Nintendo Switch </p>
 
   <!-- Game 1 -->
   <div style="max-width: 800px; margin: 20px auto; background-color: white; border-radius: 10px; padding: 20px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); text-align: left;">
