--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
 
   <!-- Game 1 -->
   <div style="max-width: 800px; margin: 20px auto; background-color: white; border-radius: 10px; padding: 20px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); text-align: left;">
-    <h3>🕹️ God Sim: Divine Decisions</h3>
-    <p>A game where players become a god and must influence their followers through signs, rituals, and divine tantrums. Built using Unity and pure imagination.</p>
-    <p><em>Status:</em> In development • <em>Genre:</em> Strategy / Simulation</p>
+    <h3>🕹️ DC Super Villains</h3>
+    <img src="https://i5.walmartimages.com/asr/e9502895-82a8-404a-9e2a-5922b983e2cb.7f86f0903698fca28f2b7169ab12b683.jpeg" alt="LEGO Build 12">
     <!-- Optional: add image or link to GitHub or playable demo -->
   </div>
 
