--- a/index.html
+++ b/index.html
@@ -144,22 +144,27 @@
     </div>
   </div>
 </div> <!-- <- All gallery items are inside this wrapper -->
-<hr style="margin: 40px auto; width: 80%; border: 1px solid #ccc;">
-
-<section id="games" style="padding: 40px; text-align: center;">
-  <h2 style="margin-bottom: 10px;">🎮 My Video Games</h2>
-  <p>When I’m not building with bricks, I'm playing LEGO's on my Nintendo Switch </p>
-
-  <!-- Game 1 -->
-  <div style="max-width: 800px; margin: 20px auto; background-color: white; border-radius: 10px; padding: 20px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); text-align: left;">
-    <h3>🕹️ DC Super Villains</h3>
-    <img src="https://i5.walmartimages.com/asr/e9502895-82a8-404a-9e2a-5922b983e2cb.7f86f0903698fca28f2b7169ab12b683.jpeg" alt="LEGO Build 12">
-    <!-- Optional: add image or link to GitHub or playable demo -->
+<center><p><h2>🎮 Games I Play</h2></p></center>
+<div class="gallery">
+  <div class="gallery-item">
+    <img src="https://i5.walmartimages.com/asr/e9502895-82a8-404a-9e2a-5922b983e2cb.7f86f0903698fca28f2b7169ab12b683.jpeg" alt="DC Super Villains">
+    <div class="description">
+      <strong>DC Super Villains</strong><br>
+      LEGO Game on Nintendo Switch
+    </div>
   </div>
 
-  <!-- Add more game blocks here -->
+  <div class="gallery-item">
+    <img src="https://assets.nintendo.com/image/upload/f_auto/q_auto/dpr_auto/c_fill,w_400/ncom/en_US/games/switch/l/lego-star-wars-the-skywalker-saga-switch/hero" alt="LEGO Star Wars">
+    <div class="description">
+      <strong>LEGO Star Wars: The Skywalker Saga</strong><br>
+      Join the Jedi... or don't. Either way, bricks will be smashed.
+    </div>
+  </div>
 
-</section>
+  <!-- Add more .gallery-item divs here if you have more games -->
+</div>
+
 
 <footer>
   Created with bricks and brains by Tish. Powered by GitHub Pages.
