--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 <body>
 
 <header>
-  <h1>E_C Brics Lab</h1>
+  <h1>E_C BricKs Lab</h1>
   <p>Where bricks meet brilliance.</p>
+  <p>#AFOL</p>
   <p><a href="about.html">About Me</a></p>
 
 </header>
