--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
     </div>
   </div>
 
+   <div class="gallery-item">
+    <img src="https://www.lego.com/cdn/cs/set/assets/blt6bedc4d774320f3c/Glow_Hero_Banner-Desktop.jpg?fit=crop&format=webply&quality=80&width=1600&height=700&dpr=1.5" alt="Horizons">
+    <div class="description">
+      <strong>Horizon Adventures</strong><br>
+       <i>Play in Progress</i> 3/10
+    </div>
+  </div>
   <!-- Add more .gallery-item divs here if you have more games -->
 </div>
 
