--- a/index.html
+++ b/index.html
@@ -212,6 +212,32 @@
   </div>
   <!-- Add more .gallery-item divs here if you have more games -->
 </div>
+<center><p><h2>📺 YouTube Videos</h2></p></center>
+<div class="gallery">
+  <div class="gallery-item">
+    <iframe width="100%" height="200" src="https://youtu.be/hkgfFPpSDsk?si=12hB7gzTFjtiIIPY" 
+      title="40 Most Wanted" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen></iframe>
+    <div class="description">
+      <strong>Top 40 Most Wanted Lego Sets of 2025</strong><br>
+      
+    </div>
+  </div>
+
+  <div class="gallery-item">
+    <iframe width="100%" height="200" src="https://youtu.be/wU4mfYbD3gI?si=vZ9L0bvHqOTq2sNF" 
+      title="June 2025 Releases" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen></iframe>
+    <div class="description">
+      <strong>June 2025 Releases</strong><br>
+      
+    </div>
+  </div>
+
+  <!-- Add more video blocks as needed -->
+</div>
 
 
 <footer>
