--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <center><p><h2>📺 YouTube Videos</h2></p></center>
 <div class="gallery">
   <div class="gallery-item">
-    <iframe width="100%" height="200" src="https://youtu.be/hkgfFPpSDsk?si=12hB7gzTFjtiIIPY" 
+    <iframe width="100%" height="200" src="https://www.youtube.com/embed/hkgfFPpSDsk&t=7s" 
       title="40 Most Wanted" frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen></iframe>
@@ -226,7 +226,7 @@
   </div>
 
   <div class="gallery-item">
-    <iframe width="100%" height="200" src="https://youtu.be/wU4mfYbD3gI?si=vZ9L0bvHqOTq2sNF" 
+    <iframe width="100%" height="200" src="https://www.youtube.com/embed/wU4mfYbD3gI" 
       title="June 2025 Releases" frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen></iframe>
