--- a/about.html
+++ b/about.html
@@ -61,9 +61,9 @@
 </header>
 
 <div class="container">
-  <h2>Hey, I'm Tish!</h2>
+  
   <p>
-    I’m a Digital Learning Specialist by day and a LEGO-loving creator by night. My passion lies in using LEGO builds not just for fun—but as powerful tools for storytelling, STEM learning, and innovation.
+    I work in secondary education by day and a LEGO-loving creator by night. My passion lies in using LEGO builds not just for fun—but as powerful tools for storytelling, STEM learning, and innovation.
   </p>
   <p>
     Whether I’m building a robotic rover, recreating iconic vehicles, or designing stop-motion sets, I’m always exploring ways to turn plastic bricks into imaginative experiences.
