--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <p>Where bricks meet brilliance.</p>
   <p>#AFOL</p>
   <p><a href="about.html">About Me</a></p>
+  <p><a href="starwars.html">Star Wars<a></p>
 
 </header>
 <center><p><h2>Sets I Own</h2></p></center>
