--- a/starwars.html
+++ b/starwars.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Star Wars Ratings</title>
+  <title>Star Wars Gallery</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -41,97 +41,75 @@
       border-bottom: 1px solid #444;
     }
     .movie-card h3 {
-      margin: 10px 0;
-      color: #ffe81f;
-    }
-    .rating-input {
       margin: 10px 0 20px 0;
-    }
-    input[type="number"] {
-      width: 50px;
-      font-size: 1em;
-      text-align: center;
-      border-radius: 4px;
-      border: none;
-      padding: 5px;
+      color: #ffe81f;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>🌌 Tish's Star Wars Watch List</h1>
-  <p>Rate each film after you watch it (1 = Bantha Poodoo, 10 = Jedi Masterpiece)</p>
+  <h1>🌌 Tish's Star Wars Movie Gallery</h1>
+  <p>A visual journey through the galaxy.</p>
 </header>
 
 <div class="gallery">
-  <!-- One movie block -->
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep1-keyart-1x1_6b179a96.jpeg" alt="Phantom Menace">
     <h3>Episode I: The Phantom Menace</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep2-keyart-1x1_45dcf858.jpeg" alt="Attack of the Clones">
     <h3>Episode II: Attack of the Clones</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep3-keyart-1x1_0a7f8ad3.jpeg" alt="Revenge of the Sith">
     <h3>Episode III: Revenge of the Sith</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep4-keyart-1x1_949adf7b.jpeg" alt="A New Hope">
     <h3>Episode IV: A New Hope</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep5-keyart-1x1_15b760d8.jpeg" alt="Empire Strikes Back">
     <h3>Episode V: The Empire Strikes Back</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep6-keyart-1x1_c2e67ef0.jpeg" alt="Return of the Jedi">
     <h3>Episode VI: Return of the Jedi</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep7-keyart-1x1_5d8b960a.jpeg" alt="The Force Awakens">
     <h3>Episode VII: The Force Awakens</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep8-keyart-1x1_8c3c6db1.jpeg" alt="The Last Jedi">
     <h3>Episode VIII: The Last Jedi</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/ep9-keyart-1x1_7d3e345b.jpeg" alt="The Rise of Skywalker">
     <h3>Episode IX: The Rise of Skywalker</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/rogueone_hero_4a74f8c4.jpeg" alt="Rogue One">
     <h3>Rogue One: A Star Wars Story</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 
   <div class="movie-card">
     <img src="https://lumiere-a.akamaihd.net/v1/images/solo_hero_7c1f3aaf.jpeg" alt="Solo">
     <h3>Solo: A Star Wars Story</h3>
-    <div class="rating-input">Rating: <input type="number" min="1" max="10" placeholder="1-10"></div>
   </div>
 </div>
 
 </body>
 </html>
+
