--- a/starwars.html
+++ b/starwars.html
@@ -55,22 +55,22 @@
 
 <div class="gallery">
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep1-keyart-1x1_6b179a96.jpeg" alt="Phantom Menace">
+    <img src="https://upload.wikimedia.org/wikipedia/en/4/40/Star_Wars_Phantom_Menace_poster.jpg" alt="Phantom Menace">
     <h3>Episode I: The Phantom Menace</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep2-keyart-1x1_45dcf858.jpeg" alt="Attack of the Clones">
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Attackoftheclones_novel.jpg" alt="Attack of the Clones">
     <h3>Episode II: Attack of the Clones</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep3-keyart-1x1_0a7f8ad3.jpeg" alt="Revenge of the Sith">
+    <img src="https://upload.wikimedia.org/wikipedia/en/9/93/Star_Wars_Episode_III_Revenge_of_the_Sith_poster.jpg" alt="Revenge of the Sith">
     <h3>Episode III: Revenge of the Sith</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep4-keyart-1x1_949adf7b.jpeg" alt="A New Hope">
+    <img src="https://upload.wikimedia.org/wikipedia/en/8/87/StarWarsMoviePoster1977.jpg" alt="A New Hope">
     <h3>Episode IV: A New Hope</h3>
   </div>
 
