--- a/starwars.html
+++ b/starwars.html
@@ -75,37 +75,37 @@
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep5-keyart-1x1_15b760d8.jpeg" alt="Empire Strikes Back">
+    <img src="https://upload.wikimedia.org/wikipedia/en/3/3f/The_Empire_Strikes_Back_%281980_film%29.jpg" alt="Empire Strikes Back">
     <h3>Episode V: The Empire Strikes Back</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep6-keyart-1x1_c2e67ef0.jpeg" alt="Return of the Jedi">
+    <img src="https://upload.wikimedia.org/wikipedia/en/b/b2/ReturnOfTheJediPoster1983.jpg" alt="Return of the Jedi">
     <h3>Episode VI: Return of the Jedi</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep7-keyart-1x1_5d8b960a.jpeg" alt="The Force Awakens">
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/a2/Star_Wars_The_Force_Awakens_Theatrical_Poster.jpg" alt="The Force Awakens">
     <h3>Episode VII: The Force Awakens</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep8-keyart-1x1_8c3c6db1.jpeg" alt="The Last Jedi">
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Star_Wars_The_Last_Jedi.jpg" alt="The Last Jedi">
     <h3>Episode VIII: The Last Jedi</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/ep9-keyart-1x1_7d3e345b.jpeg" alt="The Rise of Skywalker">
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/af/Star_Wars_The_Rise_of_Skywalker_poster.jpg" alt="The Rise of Skywalker">
     <h3>Episode IX: The Rise of Skywalker</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/rogueone_hero_4a74f8c4.jpeg" alt="Rogue One">
+    <img src="https://upload.wikimedia.org/wikipedia/en/d/d4/Rogue_One%2C_A_Star_Wars_Story_poster.png" alt="Rogue One">
     <h3>Rogue One: A Star Wars Story</h3>
   </div>
 
   <div class="movie-card">
-    <img src="https://lumiere-a.akamaihd.net/v1/images/solo_hero_7c1f3aaf.jpeg" alt="Solo">
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/54/Solo_A_Star_Wars_Story_poster.jpg" alt="Solo">
     <h3>Solo: A Star Wars Story</h3>
   </div>
 </div>
